Added an album grid view in the webinterface, mostly as a show
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/jsonrpc@26602 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/web/poc_jsonrpc/index.html
+++ b/web/poc_jsonrpc/index.html
@@ -7,5 +7,6 @@
 <h1>XBMC Webinterface</h1>
 <a href="movies.html"><h2>Movies</h2></a>
 <a href="tvshows.html"><h2>TVShows</h2></a>
+<a href="albums.html"><h2>Albums</h2></a>
 </body>
 </html>
