--- a/web/poc_jsonrpc/index.html
+++ b/web/poc_jsonrpc/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>XBMC Webinterface</h1>
+<a href="nowplaying.html"><h2>Now playing</h2></a>
 <a href="movies.html"><h2>Movies</h2></a>
 <a href="tvshows.html"><h2>TVShows</h2></a>
 <a href="albums.html"><h2>Albums</h2></a>
