Moved webinterface nowplaying to use the new ActivePlaylist stuff
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@29074 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/web/poc_jsonrpc/nowplaying.html
+++ b/web/poc_jsonrpc/nowplaying.html
@@ -42,7 +42,7 @@ if (players.length > 0) {
 
   http_request = new XMLHttpRequest();
   http_request.open( "POST", "jsonrpc", false );
-  http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"Playlist.GetItems\", \"params\": { \"fields\": [\"title\", \"plot\"] }, \"id\": 1}");
+  http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"" + player + "Playlist.GetItems\", \"params\": { \"fields\": [\"title\", \"plot\"] }, \"id\": 1}");
 
   var the_object = JSON.parse(http_request.responseText);
   var result = the_object["result"];
