--- a/web/poc_jsonrpc/albums.html
+++ b/web/poc_jsonrpc/albums.html
@@ -7,7 +7,7 @@
 function CallPlay(album) {
   var http_request = new XMLHttpRequest();
   http_request.open( "POST", "jsonrpc", false );
-  http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"AudioPlaylist.Play\", \"params\": { \"albumid\": " + album + " }, \"id\": 1}");
+  http_request.send('{"jsonrpc": "2.0", "method": "XBMC.Play", "params": { "albumid": ' + album + ' }, "id": 1}');
 }
 </script>
 </head>
@@ -35,19 +35,19 @@ function CallPlay(album) {
 <script type="text/javascript">
 var http_request = new XMLHttpRequest();
 http_request.open( "POST", "jsonrpc", false );
-http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"MusicLibrary.GetAlbums\", \"id\": 1}");
+http_request.send('{"jsonrpc": "2.0", "method": "MusicLibrary.GetAlbums", "id": 1}');
 
 var the_object = JSON.parse(http_request.responseText);
 var result = the_object["result"];
 var array = result["albums"];
 for (var property in array) {
   var item = array[property];
-  document.write("<a href=\"nowplaying.html\" onclick=CallPlay(" + item["albumid"] + ")>");
+  document.write('<a href="nowplaying.html" onclick=CallPlay(' + item["albumid"] + ')>');
   if (item["thumbnail"])
-    document.write("<img src=thumb/" + item["thumbnail"] + ".jpg width=100 alt=\"" + item["album"] + "\"></img>");
+    document.write('<img src="thumb/' + item["thumbnail"] + '.jpg" width=100 alt="' + item["album"] + '"></img>');
   else
-    document.write("<img src=images/DefaultAlbumCover.png width=100 alt=\"" + item["album"] + "\"></img>");
-  document.write("</a>");
+    document.write('<img src="images/DefaultAlbumCover.png" width=100 alt="' + item["album"] + '"></img>');
+  document.write('</a>');
 }
 
 </script>
