--- a/web/poc_jsonrpc/artists.html
+++ b/web/poc_jsonrpc/artists.html
@@ -7,15 +7,15 @@
 function CallPlay(album) {
   var http_request = new XMLHttpRequest();
   http_request.open( "POST", "jsonrpc", false );
-  http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"AudioPlaylist.Play\", \"params\": { \"albumid\": " + album + " }, \"id\": 1}");
+  http_request.send('{"jsonrpc": "2.0", "method": "XBMC.Play", "params": { "albumid": ' + album + ' }, "id": 1}');
 }
 
-function writeArtist( artist ) {
-  document.write("<h2>" + artist["label"] + "</h2>");
+function writeArtist(artist) {
+  document.write('<h2>' + artist["label"] + '</h2>');
 
   var http_request = new XMLHttpRequest();
   http_request.open( "POST", "jsonrpc", false );
-  http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"MusicLibrary.GetAlbums\", \"params\": { \"artistid\": " + artist["artistid"] + " }, \"id\": 1}");
+  http_request.send('{"jsonrpc": "2.0", "method": "MusicLibrary.GetAlbums", "params": { "artistid": ' + artist["artistid"] + ' }, "id": 1}');
 
   var the_object = JSON.parse(http_request.responseText);
   var result = the_object["result"];
@@ -23,12 +23,12 @@ function writeArtist( artist ) {
 
   for (var property in array) {
     var item = array[property];
-    document.write("<a href=\"nowplaying.html\" onclick=CallPlay(" + item["albumid"] + ")>");
+    document.write('<a href="nowplaying.html" onclick=CallPlay(' + item["albumid"] + ')>');
     if (item["thumbnail"])
-      document.write("<img src=\"thumb/" + item["thumbnail"] + ".jpg\" class=\"cover\" alt=\"" + item["label"] + "\"></img>");
+      document.write('<img src="thumb/' + item["thumbnail"] + '.jpg" class="cover" alt="' + item["label"] + '"></img>');
     else
-      document.write("<img src=\"images/DefaultAlbumCover.png\" class=\"cover\" alt=\"" + item["label"] + "\"></img>");
-    document.write("</a>");
+      document.write('<img src="images/DefaultAlbumCover.png" class="cover" alt="' + item["label"] + '"></img>');
+    document.write('</a>');
   }
 }
 </script>
@@ -57,23 +57,23 @@ function writeArtist( artist ) {
 <script type="text/javascript">
 var http_request = new XMLHttpRequest();
 http_request.open( "POST", "jsonrpc", false );
-http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"MusicLibrary.GetArtists\", \"id\": 1}");
+http_request.send('{"jsonrpc": "2.0", "method": "MusicLibrary.GetArtists", "id": 1}');
 
 var the_object = JSON.parse(http_request.responseText);
 var result = the_object["result"];
 var array = result["artists"];
 
-document.write("<table>");
+document.write('<table>');
 for (var property in array) {
-  document.write("<tr class=\"" + (property % 2 == 0 ? "even" : "odd") + "\"><td>");
+  document.write('<tr class="' + (property % 2 == 0 ? "even" : "odd") + '"><td>');
 
   var item = array[property];
 
   writeArtist(item);
 
-  document.write("</td></tr>");
+  document.write('</td></tr>');
 }
-document.write("</table>");
+document.write('</table>');
 </script>
 </body>
 </html>
