--- a/web/poc_jsonrpc/tvshows.html
+++ b/web/poc_jsonrpc/tvshows.html
@@ -27,18 +27,17 @@
 <script type="text/javascript">
 var http_request = new XMLHttpRequest();
 http_request.open( "POST", "jsonrpc", false );
-var send = { "jsonrpc": "2.0", "method": "VideoLibrary.GetTVShows", "id": 1 }
-http_request.send("{\"jsonrpc\": \"2.0\", \"method\": \"VideoLibrary.GetTVShows\", \"id\": 1}");
+http_request.send('{"jsonrpc": "2.0", "method": "VideoLibrary.GetTVShows", "id": 1}');
 
 var the_object = JSON.parse(http_request.responseText);
 var result = the_object["result"];
 var array = result["tvshows"];
 for (var property in array) {
   var item = array[property];
-  document.write("<a href=\"tvshowseasons.html?tvshowid=" + item["tvshowid"] + "\">");
-  document.write("<img src=\"" + (item["thumbnail"] ? ("thumb/" + item["thumbnail"] + ".jpg"): "images/nocover.jpg") + "\"></img>");
-  document.write("</a>");
-  document.write("<br>");
+  document.write('<a href="tvshowseasons.html?tvshowid=' + item["tvshowid"] + '">');
+  document.write('<img src="' + (item["thumbnail"] ? ("thumb/" + item["thumbnail"] + ".jpg"): "images/nocover.jpg") + '"></img>');
+  document.write('</a>');
+  document.write('<br>');
 }
 </script>
 </body>
