Applied #9333 - Thanks typo101
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@30915 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/web/poc_jsonrpc/movies.html
+++ b/web/poc_jsonrpc/movies.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>XBMC - Movies</title>
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
 <script type="text/javascript">
 function CallPlay(movieid) {
   var http_request = new XMLHttpRequest();
@@ -30,7 +30,7 @@ function CallPlay(movieid) {
   </table></td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 var http_request = new XMLHttpRequest();
