--- a/web/poc_jsonrpc/musicfiles.html
+++ b/web/poc_jsonrpc/musicfiles.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <title>XBMC - Music files</title>
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
-<script type="text/javascript" src="help.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
+<script type="text/javascript" src="help.js"></script>
 <script type="text/javascript">
 function PlayMovie(movieid)
 {
@@ -30,7 +30,7 @@ function PlayMovie(movieid)
   </table></td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 String.prototype.endsWith = function(str) 
