--- a/web/poc_jsonrpc/tvshowseasons.html
+++ b/web/poc_jsonrpc/tvshowseasons.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
-<script type="text/javascript" src="help.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
+<script type="text/javascript" src="help.js"></script>
 </head>
 <body>
 <table class="Navigation">
@@ -23,7 +23,7 @@
   </table></td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 var tvshowid = gup("tvshowid");
