--- a/web/poc_jsonrpc/artists.html
+++ b/web/poc_jsonrpc/artists.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>XBMC - Artists</title> 
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
 <script type="text/javascript">
 function CallPlay(album) {
   var http_request = new XMLHttpRequest();
@@ -50,7 +50,7 @@ function writeArtist(artist) {
   </table></td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 var http_request = new XMLHttpRequest();
