--- a/web/poc_jsonrpc/development.html
+++ b/web/poc_jsonrpc/development.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>XBMC - Development</title>
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
 </head>
 <body>
 <table class="Navigation">
@@ -13,7 +13,7 @@
   <td class="selected">Development</td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 var http_request = new XMLHttpRequest();
