--- a/web/poc_jsonrpc/nowplaying.html
+++ b/web/poc_jsonrpc/nowplaying.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>XBMC - Now playing</title>
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
 <script type="text/javascript">
 function CallMethod(method)
 {
@@ -35,7 +35,7 @@ function refresh()
   <td class="unselected"><a href="development.html">Development</a></td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 setTimeout( "refresh()", 5*1000 );
