--- a/web/poc_jsonrpc/tvshowepisodes.html
+++ b/web/poc_jsonrpc/tvshowepisodes.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
-<script type="text/javascript" src="help.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
+<script type="text/javascript" src="help.js"></script>
 <script type="text/javascript">
 function CallPlay(episodeid) {
   var http_request = new XMLHttpRequest();
@@ -30,7 +30,7 @@ function CallPlay(episodeid) {
   </table></td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 var tvshowid = gup("tvshowid");
