--- a/web/poc_jsonrpc/tvshows.html
+++ b/web/poc_jsonrpc/tvshows.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<link type="text/css" rel="stylesheet" href="basic.css" />
-<script type="text/javascript" src="json.js" />
+<link type="text/css" rel="stylesheet" href="basic.css">
+<script type="text/javascript" src="json.js"></script>
 </head>
 <body>
 <table class="Navigation">
@@ -22,7 +22,7 @@
   </table></td>
 </tr>
 </table>
-<br />
+<br>
 
 <script type="text/javascript">
 var http_request = new XMLHttpRequest();
